#summary Changelog for all changes since the fork

= Changes =
== Version 1.34 ==
  * Fixed some DB issues regarding closed cursors

== Version 1.33 ==
  * Issue #92: Introduced a new preference for the size of the title inside the ArticleHeaderView.
  * Fixed several bugs which were leading to FCs

== Version 1.32 ==
  * Reintroduced the "Progress_Indeterminate" notification for API-Levels < 11
  * IllegalStateExceptions should not occur anymore
  * Fixed several bugs which were leading to FCs

== Version 1.31 ==
  * Fixed several bugs.

== Version 1.3 (1) ==
  * Completely re-wrote the communication between interface and backend
   -> Interface did active polling, now it registers as listener and gets notified about changes
  * Completely changed the way the DB is accessed, drastically reduced the number of locks involved
  * Slight changes to the UI to work with the changed code
  * Lots of changes to reduce the amount of work for DB-Write-Accesses and necessary RAM for the ImageCache
  * Added ActionBarSherlock, included "mark all read" and "display all" in ActionBar, optionally if there is room also "offline" and "ImageCache"
  * Some minor fixes to portrait/landscape-mode and positioning of the swipe-area
  * Performance-optimizations

== Version 1.26 (1) ==
  * Fixed FC on startup. Sry about that. I made changes for Android 4.0 and didn't properly test with older versions.
  * Completed work on background tasks
  * Minor changes 

== Version 1.25 ==
  * Reduced time to switch activities
  * Tried to prevent display of empty datasets
  * Fixed ImageCache for devices running Android 4.x
  * Finally resolved concurrency-issues (Android-Devs are to be blamed...)
  * Minor Bugfixes

== Version 1.24 ==
  * Performance-Optimizations for faster startup
  * Fix starred/published articles never beeing purged
  * Minor Bugfixes

== Version 1.23 ==
  * Downloaded attachments are opened when tapping the notification now