@@ -3,6 +3,9 @@
 = Changes =
 == Version 1.34 ==
   * Fixed some DB issues regarding closed cursors
+  * Fixed automatic refresh of labels on startup
+  * No error-reporting when using app in debug-mode
+  * Several minor bugfixes for FCs and ANRs
 
 == Version 1.33 ==
   * Issue #92: Introduced a new preference for the size of the title inside the ArticleHeaderView.
